--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 <body>
     <div id="app" class="app"></div>
-
-    <script src="./scripts/main.js"></script>
+    <script src="./scripts/main.min.js"></script>
 </body>
 </html>
