--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
     <div id="app" class="app"></div>
-    <script src="./scripts/main.min.js"></script>
+    <!-- <script src="./scripts/main.min.js"></script> -->
+    <script src="./scripts/swipe.min.js"></script>
+    <script src="./scripts/demo.js"></script>
 </body>
 </html>
