--- a/index.html
+++ b/index.html
@@ -10,8 +10,17 @@
 </head>
 <body>
     <div id="app" class="app"></div>
-    <!-- <script src="./scripts/main.min.js"></script> -->
+    
     <script src="./scripts/swipe.min.js"></script>
-    <script src="./scripts/demo.js"></script>
+    <script>
+        const app = document.getElementById('app');
+        const script = document.createElement('script');
+
+        script.src = './scripts/demo.js';
+        document.body.append(script);
+
+        script.onload = () => app.classList.add('app_IS-LOADED');
+        script.onerror = () => alert('Error');
+    </script>
 </body>
 </html>
